# 2025ESWContest_free_1150_DREAMERS_Imbeded

./: .gitattributes  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
.claude/: settings.local.json
HMI/ｆｏｎｔ/: ｐｒｅｔｅｎｄａｒｄ－bold.zi  ｐｒｅｔｅｎｄａｒｄ－ｎｏｒｍａｌ.zi
components/api_client/: CMakeLists.txt
components/api_client/include/: api_client.h
components/api_client/src/: api_client.c
components/button_handler/: CMakeLists.txt
components/button_handler/include/: button_handler.h
components/button_handler/src/: button_handler.c
components/device_cfg/: CMakeLists.txt
components/device_cfg/include/: device_cfg.h
components/device_cfg/src/: device_config.c
components/fota_manager/: CMakeLists.txt
components/fota_manager/include/: fota_manager.h
components/fota_manager/src/: fota_manager.c
components/nextion_hmi/: CMakeLists.txt
components/nextion_hmi/include/: nextion_hmi.h
components/nextion_hmi/src/: nextion_hmi.c
components/utils/: CMakeLists.txt
components/utils/include/: utils.h
components/utils/src/: utils.c
components/web_server/: CMakeLists.txt
components/web_server/include/: web_server.h
components/wifi_manager/: CMakeLists.txt
docs/: backend-implementation-guide.md  esp32-server-docs.md
main/: CMakeLists.txt  main.c
main/include/: app_state.h  event_handlers.h  home_display.h  main_loop.h  system_init.h
main/src/: app_state.c  event_handlers.c  home_display.c  main.c  main_loop.c  system_init.c
pump_board/source/: source.ino
sensor_board/source/: source.ino
sensor_board/src/: firnware.ino
(+4 files in other folders)
